--- a/index.html
+++ b/index.html
@@ -166,29 +166,40 @@ const wealthTaxByCountry = {
   },
   Switzerland: {
     status: "net",
-    summary: "Cantonal net wealth tax on worldwide assets.",
+    summary: "Thresholds vary by canton. Net wealth tax on worldwide assets.",
     design: "Progressive rates typically 0.1%–1%.",
     alternatives: "Relatively low capital gains taxes."
   },
   Norway: {
     status: "net",
-    summary: "National and municipal net wealth tax above threshold.",
-    design: "Combined rate approx. 0.85%.",
-    alternatives: "No inheritance tax."
+    summary: "~1.7 million NOK (around £120–130k).Married couples double threshold",
+    design: "1-1.1 total%. Divided between municipal and state portions",
+    alternatives: "Inheritance tax: abolished in 2014. Capital gains tax: 37.8% effective rate (on shares, etc.) Property tax: local and limited."
   },
   Spain: {
     status: "net",
-    summary: "Progressive net wealth tax above €700k.",
-    design: "Rates vary by region up to ~3%.",
-    alternatives: "Inheritance and capital gains taxes."
+    summary: "Progressive net wealth tax above €700k. Applies to all wealth for residents and wealth located in Spain for non-residents",
+    design: "Rates vary by region 0.2% - 3.5%.",
+    alternatives: "Inheritance, capital gains taxes and municipial property tax. Temporary “Solidarity Wealth Tax” on ultra-wealthy (assets over €3 million) ."
   },
   France: {
     status: "alt",
     summary: "Replaced wealth tax with real-estate wealth tax (IFI).",
-    design: "Applies to property only.",
+    design: "Applies to real estate assets worth over €1.3 million. Was previously on net wealth on worldwide assets.",
     alternatives: "Inheritance and capital gains taxes."
-  }
+  },
+  Sweden: {
+    status: "net",
+    summary: "Abolished in 2007. Before Abolition: threshold of 1.5 million SEK",
+    design: "Flat 1.5% annual rate.",
+    Reason for ending: "Capital flight and administrative costs exceeded revenue benefits"
+  },
+  Netherlands: {
+    status: "net",
+    summary: "Calculates income from assets, pay 36% wealth tax on total returns. ",
+    Design "Effectively 1-1.3% wealth-equivalent tax"
 };
+  
 
 /* ========= MAP SETUP ========= */
 
