--- a/index.html
+++ b/index.html
@@ -2,104 +2,138 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Wealth Tax World Map</title>
+<title>Global Wealth Tax Map</title>
 
 <style>
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #f4fbf6;
+  background: #f4fbf6;
+  overflow: hidden;
 }
 
-#container {
-  display: flex;
+#map-container {
+  position: relative;
+  width: 100vw;
   height: 100vh;
 }
 
-#map {
-  width: 65%;
-  background-color: #e8f5e9;
+svg {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s ease;
+}
+
+.country {
+  stroke: #ffffff;
+  stroke-width: 0.5;
+  cursor: pointer;
+  transition: fill 0.3s, filter 0.3s;
+}
+
+.active { fill: #2e7d32; }
+.abolished { fill: #81c784; }
+.other { fill: #c8e6c9; }
+
+.country:hover {
+  filter: brightness(1.2);
 }
 
 #infoPanel {
-  width: 35%;
-  padding: 20px;
+  position: absolute;
+  top: 0;
+  right: -400px;
+  width: 400px;
+  height: 100%;
+  background: white;
+  padding: 25px;
   overflow-y: auto;
-  background-color: white;
-  border-left: 5px solid #1b5e20;
+  box-shadow: -4px 0 15px rgba(0,0,0,0.15);
+  transition: right 0.5s ease;
+  border-left: 6px solid #1b5e20;
+}
+
+#infoPanel.open {
+  right: 0;
 }
 
 h2 {
   color: #1b5e20;
 }
 
-.active {
-  fill: #2e7d32;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.abolished {
-  fill: #81c784;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.active:hover,
-.abolished:hover {
-  fill: #1b5e20;
-}
-
 .legend {
   position: absolute;
-  bottom: 10px;
-  left: 10px;
+  bottom: 20px;
+  left: 20px;
   background: white;
-  padding: 10px;
-  border-radius: 8px;
+  padding: 12px;
+  border-radius: 10px;
   font-size: 14px;
-  box-shadow: 0 0 8px rgba(0,0,0,0.1);
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 </style>
 </head>
 
 <body>
 
-<div id="container">
+<div id="map-container">
 
-<div id="map">
+<svg id="worldMap" viewBox="0 0 1000 500">
 
-<svg viewBox="0 0 1000 500" width="100%" height="100%">
+<!-- Simplified full world layout -->
 
-<!-- Simplified realistic Europe section -->
+<!-- North America -->
+<path class="other country" d="M80 200 L200 180 L250 220 L200 260 L100 240 Z"/>
+
+<!-- South America -->
+<path class="other country" d="M220 300 L260 340 L240 400 L200 360 Z"/>
+
+<!-- Europe Background -->
+<path class="other country" d="M350 150 L550 150 L600 250 L350 250 Z"/>
 
 <!-- France -->
-<path class="abolished" onclick="showCountry('france')"
-d="M420 250 L440 240 L460 250 L455 270 L430 275 Z"/>
+<path class="abolished country"
+onclick="zoomTo(430,220); showCountry('france')"
+d="M420 220 L450 210 L470 230 L455 250 L430 245 Z"/>
 
 <!-- Spain -->
-<path class="active" onclick="showCountry('spain')"
-d="M380 280 L420 280 L430 300 L390 305 Z"/>
+<path class="active country"
+onclick="zoomTo(400,250); showCountry('spain')"
+d="M380 250 L420 250 L430 280 L390 285 Z"/>
 
 <!-- Germany -->
-<path class="abolished" onclick="showCountry('germany')"
-d="M450 230 L480 230 L480 260 L455 265 Z"/>
+<path class="abolished country"
+onclick="zoomTo(470,200); showCountry('germany')"
+d="M460 200 L490 200 L490 230 L465 235 Z"/>
 
 <!-- Switzerland -->
-<path class="active" onclick="showCountry('switzerland')"
-d="M455 260 L470 260 L468 272 L455 270 Z"/>
+<path class="active country"
+onclick="zoomTo(470,230); showCountry('switzerland')"
+d="M465 230 L480 230 L478 245 L465 240 Z"/>
 
 <!-- Italy -->
-<path class="abolished" onclick="showCountry('italy')"
-d="M480 280 L495 300 L490 320 L475 305 Z"/>
+<path class="abolished country"
+onclick="zoomTo(490,260); showCountry('italy')"
+d="M490 260 L510 290 L500 320 L480 290 Z"/>
 
 <!-- Norway -->
-<path class="active" onclick="showCountry('norway')"
-d="M460 120 L480 110 L490 150 L470 160 Z"/>
+<path class="active country"
+onclick="zoomTo(480,120); showCountry('norway')"
+d="M470 100 L500 90 L510 150 L480 160 Z"/>
 
 <!-- Sweden -->
-<path class="abolished" onclick="showCountry('sweden')"
-d="M490 120 L510 110 L520 170 L500 180 Z"/>
+<path class="abolished country"
+onclick="zoomTo(520,120); showCountry('sweden')"
+d="M510 100 L540 90 L550 170 L520 180 Z"/>
+
+<!-- Africa -->
+<path class="other country" d="M400 260 L520 260 L550 400 L430 420 Z"/>
+
+<!-- Asia -->
+<path class="other country" d="M600 150 L900 180 L850 300 L600 280 Z"/>
+
+<!-- Australia -->
+<path class="other country" d="M820 350 L900 360 L880 420 L810 410 Z"/>
 
 </svg>
 
@@ -109,11 +143,9 @@ d="M490 120 L510 110 L520 170 L500 180 Z"/>
 🟩 Abolished Wealth Tax
 </div>
 
-</div>
-
 <div id="infoPanel">
 <h2>Click a country</h2>
-<p>Country wealth tax information will appear here.</p>
+<p>Wealth tax information will appear here.</p>
 </div>
 
 </div>
@@ -127,22 +159,20 @@ title: "🇫🇷 France",
 summary: `
 <strong>Summary (ISF – abolished 2018)</strong><br>
 Threshold: €1.3 million<br>
-Rates: 0.5% – 1.5% progressive<br>
-Applied to: Global net wealth<br>
-Business assets largely exempt
+Rates: 0.5% – 1.5%<br>
+Applied to global net wealth
 `,
 failure: `
-<strong>Why ISF Was Abolished</strong><br>
-• Capital flight concerns<br>
+<strong>Why ISF Failed</strong><br>
+• Capital flight<br>
 • Wealth relocation<br>
-• Investment disincentives<br>
 • Low revenue vs complexity
 `,
 alternative: `
 <strong>Alternative: IFI</strong><br>
-• Applies only to real estate wealth<br>
-• Same €1.3m threshold<br>
-• Narrower base reduces capital flight
+Applies only to real estate wealth<br>
+Same €1.3m threshold<br>
+Narrows base to reduce capital flight
 `
 },
 
@@ -151,14 +181,13 @@ title: "🇳🇴 Norway",
 summary: `
 <strong>Summary</strong><br>
 Threshold: ~1.7m NOK<br>
-Rate: ~1% (municipal + state)<br>
+Rate: ~1%<br>
 Status: Active
 `,
 failure: "",
 alternative: `
 <strong>Key Issues</strong><br>
-• Debate over entrepreneur relocation<br>
-• Political controversy
+Entrepreneur relocation debate
 `
 },
 
@@ -166,15 +195,15 @@ spain: {
 title: "🇪🇸 Spain",
 summary: `
 <strong>Summary</strong><br>
-Threshold: €700,000 (regional variation)<br>
+Threshold: €700,000<br>
 Rates: 0.2% – 3.5%<br>
-Madrid offers 100% relief
+Regional variation
 `,
 failure: "",
 alternative: `
 <strong>Key Issues</strong><br>
-• Regional inequality<br>
-• Wealth mobility
+Regional inequality<br>
+Madrid offers relief
 `
 },
 
@@ -182,15 +211,14 @@ switzerland: {
 title: "🇨🇭 Switzerland",
 summary: `
 <strong>Summary</strong><br>
-Rates: 0.1% – 1% (cantonal)<br>
-Status: Active
+Cantonal wealth tax<br>
+0.1% – 1%
 `,
 failure: "",
 alternative: `
 <strong>Why It Works</strong><br>
-• Moderate rates<br>
-• Cantonal tax competition<br>
-• Integrated system
+Moderate rates<br>
+Tax competition
 `
 },
 
@@ -198,14 +226,12 @@ germany: {
 title: "🇩🇪 Germany",
 summary: `
 <strong>Summary (Until 1997)</strong><br>
-Rate: ~1%<br>
-Status: Abolished
+~1% rate<br>
+Abolished
 `,
 failure: `
 <strong>Why It Failed</strong><br>
-• Ruled unconstitutional<br>
-• Valuation inequality<br>
-• Administrative issues
+Unconstitutional valuation rules
 `,
 alternative: ""
 },
@@ -214,14 +240,13 @@ sweden: {
 title: "🇸🇪 Sweden",
 summary: `
 <strong>Summary (Until 2007)</strong><br>
-Rate: ~1.5%<br>
-Status: Abolished
+~1.5% rate<br>
+Abolished
 `,
 failure: `
 <strong>Why It Failed</strong><br>
-• Capital flight<br>
-• Wealth moved abroad<br>
-• Low revenue vs distortion
+Capital flight<br>
+Low revenue
 `,
 alternative: ""
 },
@@ -230,27 +255,25 @@ italy: {
 title: "🇮🇹 Italy",
 summary: `
 <strong>Summary</strong><br>
-General wealth tax abolished in 1990s
+General wealth tax abolished 1990s
 `,
 failure: `
 <strong>Why It Failed</strong><br>
-• Low revenue<br>
-• Administrative inefficiency
+Low revenue<br>
+Administrative burden
 `,
 alternative: `
 <strong>Alternatives</strong><br>
-• IVAFE (financial assets)<br>
-• IMU (property tax)
+IVAFE (financial assets)<br>
+IMU (property tax)
 `
 }
 
 };
 
-
 function showCountry(country) {
 const panel = document.getElementById("infoPanel");
-
-if(!countryData[country]) return;
+panel.classList.add("open");
 
 panel.innerHTML = `
 <h2>${countryData[country].title}</h2>
@@ -258,6 +281,12 @@ panel.innerHTML = `
 ${countryData[country].failure ? `<p>${countryData[country].failure}</p>` : ""}
 ${countryData[country].alternative ? `<p>${countryData[country].alternative}</p>` : ""}
 `;
+}
+
+function zoomTo(x, y) {
+const svg = document.getElementById("worldMap");
+svg.style.transformOrigin = `${x}px ${y}px`;
+svg.style.transform = "scale(2)";
 }
 
 </script>
